{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 28,
  "lineage": "f6e3ffb1-b5f2-f560-9a51-e47cadd18a7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6d4b78f5ff8d96",
            "arn": "arn:aws:ec2:us-east-1:376129885962:elastic-ip/eipalloc-07e6d4b78f5ff8d96",
            "domain": "vpc",
            "id": "eipalloc-07e6d4b78f5ff8d96",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-237-240.compute-1.amazonaws.com",
            "public_ip": "100.29.237.240",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-nat-eip"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-nat-eip",
              "Owner": "AHS",
              "Project": "TicketDeck"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "eipalloc-07e6d4b78f5ff8d96",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:internet-gateway/igw-030ec63abe4b7e217",
            "id": "igw-030ec63abe4b7e217",
            "owner_id": "376129885962",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-igw"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-igw",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "igw-030ec63abe4b7e217",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:loadbalancer/app/tkt-ahs-alb/5344d311f6c2e8e6",
            "arn_suffix": "app/tkt-ahs-alb/5344d311f6c2e8e6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tkt-ahs-alb-1966752137.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376129885962:loadbalancer/app/tkt-ahs-alb/5344d311f6c2e8e6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tkt-ahs-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ee830f394a25dce6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a394495387990b6"
              },
              {
                "subnet_id": "subnet-04aac8893a807ac48"
              }
            ],
            "subnets": [
              "subnet-03a394495387990b6",
              "subnet-04aac8893a807ac48"
            ],
            "tags": {
              "Name": "tkt-ahs-alb"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-alb",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:loadbalancer/app/tkt-ahs-alb/5344d311f6c2e8e6"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:listener/app/tkt-ahs-alb/5344d311f6c2e8e6/67277d1853337c26",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:targetgroup/tkt-ahs-tg/2f713ddee16f2f48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376129885962:listener/app/tkt-ahs-alb/5344d311f6c2e8e6/67277d1853337c26",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:loadbalancer/app/tkt-ahs-alb/5344d311f6c2e8e6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "tkt-ahs-http-listener"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-http-listener",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:listener/app/tkt-ahs-alb/5344d311f6c2e8e6/67277d1853337c26"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:targetgroup/tkt-ahs-tg/2f713ddee16f2f48",
            "arn_suffix": "targetgroup/tkt-ahs-tg/2f713ddee16f2f48",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376129885962:targetgroup/tkt-ahs-tg/2f713ddee16f2f48",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tkt-ahs-tg",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tkt-ahs-tg"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-tg",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376129885962:targetgroup/tkt-ahs-tg/2f713ddee16f2f48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6d4b78f5ff8d96",
            "association_id": "eipassoc-0ba1fa2f3790d587e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-094c92b8fa019d23f",
            "network_interface_id": "eni-09a7b3357bc99569b",
            "private_ip": "10.0.1.34",
            "public_ip": "100.29.237.240",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04aac8893a807ac48",
            "tags": {
              "Name": "tkt-ahs-nat"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-nat",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "nat-094c92b8fa019d23f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a98f93fea48f7e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094c92b8fa019d23f",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03a98f93fea48f7e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03a98f93fea48f7e0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030ec63abe4b7e217",
            "id": "r-rtb-029f13050e5d212541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-029f13050e5d21254",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-029f13050e5d21254"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:route-table/rtb-03a98f93fea48f7e0",
            "id": "rtb-03a98f93fea48f7e0",
            "owner_id": "376129885962",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "tkt-ahs-private-rt"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-private-rt",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtb-03a98f93fea48f7e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:route-table/rtb-029f13050e5d21254",
            "id": "rtb-029f13050e5d21254",
            "owner_id": "376129885962",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "tkt-ahs-public-rt"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-public-rt",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtb-029f13050e5d21254",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2c04d0cbca091ed",
            "region": "us-east-1",
            "route_table_id": "rtb-03a98f93fea48f7e0",
            "subnet_id": "subnet-0a234fda343e2aa23"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtbassoc-0f2c04d0cbca091ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08180e2f696265183",
            "region": "us-east-1",
            "route_table_id": "rtb-03a98f93fea48f7e0",
            "subnet_id": "subnet-0ce9c98a240c5cf08"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtbassoc-08180e2f696265183",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be7430c34ff862f9",
            "region": "us-east-1",
            "route_table_id": "rtb-029f13050e5d21254",
            "subnet_id": "subnet-04aac8893a807ac48"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtbassoc-0be7430c34ff862f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a23156e5a3e928b",
            "region": "us-east-1",
            "route_table_id": "rtb-029f13050e5d21254",
            "subnet_id": "subnet-03a394495387990b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "rtbassoc-05a23156e5a3e928b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:security-group/sg-0ee830f394a25dce6",
            "description": "Security group for TicketDeck Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee830f394a25dce6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tkt-ahs-alb-sg",
            "name_prefix": "",
            "owner_id": "376129885962",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tkt-ahs-alb-sg"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-alb-sg",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "sg-0ee830f394a25dce6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:security-group/sg-0b3f1405d62002cf7",
            "description": "Security group for TicketDeck ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3f1405d62002cf7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "FastAPI traffic from the ALB",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee830f394a25dce6"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "tkt-ahs-ecs-sg",
            "name_prefix": "",
            "owner_id": "376129885962",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tkt-ahs-ecs-sg"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-ecs-sg",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "sg-0b3f1405d62002cf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:subnet/subnet-0a234fda343e2aa23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a234fda343e2aa23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129885962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-private-1"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-private-1",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "subnet-0a234fda343e2aa23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:subnet/subnet-0ce9c98a240c5cf08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce9c98a240c5cf08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129885962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-private-2"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-private-2",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "subnet-0ce9c98a240c5cf08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:subnet/subnet-04aac8893a807ac48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aac8893a807ac48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129885962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-public-1"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-public-1",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "subnet-04aac8893a807ac48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:subnet/subnet-03a394495387990b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a394495387990b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129885962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-public-2"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-public-2",
              "Owner": "AHS",
              "Project": "TicketDeck"
            },
            "vpc_id": "vpc-014f93f84ee7cbad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "subnet-03a394495387990b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129885962:vpc/vpc-014f93f84ee7cbad3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bb5fcdfc5083600",
            "default_route_table_id": "rtb-0691ddb6d93be1729",
            "default_security_group_id": "sg-071e1d36d147a2ab0",
            "dhcp_options_id": "dopt-0ff8659772a3766ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014f93f84ee7cbad3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0691ddb6d93be1729",
            "owner_id": "376129885962",
            "region": "us-east-1",
            "tags": {
              "Name": "tkt-ahs-vpc"
            },
            "tags_all": {
              "CostCenter": "TicketDeck-POC",
              "Environment": "m2",
              "Name": "tkt-ahs-vpc",
              "Owner": "AHS",
              "Project": "TicketDeck"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376129885962",
            "id": "vpc-014f93f84ee7cbad3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}